--- a/inst/docs/stocksReport.Rmd
+++ b/inst/docs/stocksReport.Rmd
@@ -28,7 +28,7 @@ print(params$portf_daily_change)
 
 ## Portfolio Performance
 ```{r echo = FALSE, warning = FALSE}
-kable(params$portfolio_perf, row.names = FALSE) %>%
+knitr::kable(params$portfolio_perf, row.names = FALSE) %>%
   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive")) %>% 
   scroll_box(width = "100%", height = "500px")
 ```
