--- a/inst/docs/stocksReport.Rmd
+++ b/inst/docs/stocksReport.Rmd
@@ -8,6 +8,7 @@ params:
   portf_stocks_histchange_weighted: NA
   portf_stocks_histchange_absolute: NA
   portf_distribution: NA
+  portf_daily: NA
   portfolio_perf: NA
 ---
 ```{r echo = FALSE}
@@ -35,6 +36,11 @@ print(params$portf_stocks_change)
 ```{r fig.width = 10, fig.height = 7, echo = FALSE}
 print(params$portf_stocks_histchange_weighted)
 print(params$portf_stocks_histchange_absolute)
+```
+
+## Daily Portfolio Change
+```{r fig.width = 10, fig.height = 4, echo = FALSE}
+print(params$portf_daily)
 ```
 
 ## Portfolio Distribution
