fix: avoid NA warning on mplot_gain + changed knitr to rmarkdown on vignettes

--- a/vignettes/h2o_automl.Rmd
+++ b/vignettes/h2o_automl.Rmd
@@ -3,7 +3,7 @@ title: "Introduction to AutoML using `lares`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Introduction to h2o_automl}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{rmarkdown::render}
   %\VignetteEncoding{UTF-8}
 ---
 
