fix: rmarkdown.html_vignette.check_title

--- a/vignettes/h2o_automl.Rmd
+++ b/vignettes/h2o_automl.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Introduction to AutoML using `lares`"
+title: "Introduction to AutoML using lares"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Introduction to h2o_automl}
+  %\VignetteIndexEntry{Introduction to AutoML using lares}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
