reformat: docs and some functions names

--- a/vignettes/h2o_automl.Rmd
+++ b/vignettes/h2o_automl.Rmd
@@ -10,7 +10,8 @@ vignette: >
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE, comment = "#>", results = "hide",
-  fig.width = 7.1, fig.height = 5.5
+  fig.width = 7.1, fig.height = 5.5,
+  error = TRUE, purl = FALSE
 )
 h2o::h2o.init() # Just to be sure
 ```
