docs: favicon fix p3 + update ml.Rmd

--- a/vignettes/games.Rmd
+++ b/vignettes/games.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 )
 
 # Enable ANSI color output in HTML vignettes
+Sys.setenv(CLICOLOR_FORCE = "1")
 options(crayon.enabled = TRUE)
 library(fansi)
 old_hooks <- fansi::set_knit_hooks(knitr::knit_hooks,
