--- a/vignettes/robyn_lares.Rmd
+++ b/vignettes/robyn_lares.Rmd
@@ -4,7 +4,7 @@ author: "Bernardo Lares"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Robyn enhancers}
+  %\VignetteIndexEntry{Robyn Enhancers}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
