--- a/vignettes/games.Rmd
+++ b/vignettes/games.Rmd
@@ -24,8 +24,7 @@ Sys.setenv(CLICOLOR_FORCE = "1")
 options(crayon.enabled = TRUE)
 library(fansi)
 old_hooks <- fansi::set_knit_hooks(knitr::knit_hooks,
-  which = c("output", "message", "error"),
-  class = c("fansi", "fansi", "fansi")
+  which = c("output", "message", "error")
 )
 ```
 
